[BUGFIX] CSS: set backgroundsize to "cover" instead of "100%" to avoid 1px gap in some cases

--- a/Resources/Public/Css/video-url-replace.css
+++ b/Resources/Public/Css/video-url-replace.css
@@ -2,7 +2,7 @@
 	background: black;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	transition: all 200ms ease;
 	cursor: pointer;
 
